wrap up project - add desktop footer - clean up all files from development code - add css animation to buttons and links - fix header--link image overlay problem

--- a/src/scss/1-Settings/_settings.global.scss
+++ b/src/scss/1-Settings/_settings.global.scss
@@ -7,6 +7,8 @@
 
 // Breakpoints
 
+$mobile-bp: 650px;
+$desktop-bp: 850px;
 $design-width-mobile: 375px;
 $design-width-desktop: 1100px;
 
@@ -25,9 +27,3 @@ $heading-font: 'DM Serif Display', serif;
 
 @import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap');
 $main-font: 'Karla', sans-serif;
-
-// Standardise some UI treatments.
-// e.g.
-
-$global-radius: 3px !default;
-$global-transition: all 300ms ease-in-out !default;
