--- a/src/scss/6-Components/button.scss
+++ b/src/scss/6-Components/button.scss
@@ -11,6 +11,7 @@ button {
   padding: .5rem 2.125rem;
   font-size: 14px;
   font-weight: 600;
+  transition: background-color .3s;
 }
 
 .btn-menu {
