--- a/src/scss/6-Components/homepage-cta.scss
+++ b/src/scss/6-Components/homepage-cta.scss
@@ -21,7 +21,7 @@
   }
 }
 
-@media (min-width: 850px) {
+@media (min-width: $desktop-bp) {
   .cta {
     background: top right url("../../img/bg-pattern-how-we-work-desktop.svg") no-repeat $primary-dark-violet;
     height: 250px;
