--- a/src/scss/6-Components/homepage-features.scss
+++ b/src/scss/6-Components/homepage-features.scss
@@ -43,7 +43,7 @@
     line-height: 1.8;
   }
 }
-@media(min-width: 850px) {
+@media(min-width: $desktop-bp) {
   .features {
     margin-top: 20.3rem;
     align-items: flex-start;
