--- a/src/scss/6-Components/homepage-hero.scss
+++ b/src/scss/6-Components/homepage-hero.scss
@@ -38,6 +38,8 @@
   }
   &--link {
     margin: 0 auto;
+    position: relative;
+    z-index: 1;
   }
   &--bg-right-bottom-mobile {
     position: absolute;
@@ -68,7 +70,7 @@
   }
 }
 
-@media (min-width: 850px) {
+@media (min-width: $desktop-bp) {
   .hero {
     background: $primary-dark-violet;
     padding-top: 7rem;
